output/dev/escapes.err
output prefix: llvm/dev/escapes
llvmas: /Users/cmk/llvm/bin/llvm-as
llc: /Users/cmk/llvm/bin/llc
cc: gcc
codegen: /Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decafcomp
stdlib: /Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decaf-stdlib.c
generating llvm code:/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decafcomp ... ok
; ModuleID = 'Print'

@gstr = private unnamed_addr constant [9 x i8] c"\09\0B\0D\0A\07\0C\08\5C\00"

define void @main() {
entry:
  call void @print_string(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @gstr, i32 0, i32 0))
  ret i32 0
}

declare void @print_string(i8*)
assembling to bitcode:/Users/cmk/llvm/bin/llvm-as "llvm/dev/escapes.llvm" -o "llvm/dev/escapes.llvm.bc" ... failed (1)
/Users/cmk/llvm/bin/llvm-as: llvm/dev/escapes.llvm:8:7: error: value doesn't match function result type 'void'
  ret i32 0
      ^
converting to native code:/Users/cmk/llvm/bin/llc "llvm/dev/escapes.llvm.bc" -o "llvm/dev/escapes.llvm.s" ... failed (1)
/Users/cmk/llvm/bin/llc: llvm/dev/escapes.llvm.bc: error: Could not open input file: No such file or directory
linking:gcc -o "llvm/dev/escapes.llvm.exec" "llvm/dev/escapes.llvm.s" "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decaf-stdlib.c" ... failed (1)
clang: error: no such file or directory: 'llvm/dev/escapes.llvm.s'
running:llvm/dev/escapes.llvm.exec ...Traceback (most recent call last):
  File "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/llvm-run", line 172, in <module>
    result &= run("running", "%s.llvm.exec" % (out_prefix), ".run", None, out_prefix)
  File "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/llvm-run", line 90, in run
    retval = subprocess.call(shlex.split(cmd), stdin=infile, stdout=outoutfile, stderr=outerrfile)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 522, in call
    return Popen(*popenargs, **kwargs).wait()
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 710, in __init__
    errread, errwrite)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 1335, in _execute_child
    raise child_exception
OSError: [Errno 2] No such file or directory
